--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,4 @@
+@import "./node_modules/bourbon/app/assets/stylesheets/_bourbon.scss";
+
 @import "_variables.scss";
-@import "_flex.scss";
-@import "_base.scss" ;
+@import "_base.scss";
