--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,15 @@
 html {
-  height: 100%; }
+  height: 100%;
+  padding: 0;
+  margin: 0; }
 
 body {
   background-color: black;
-  height: 100%; }
+  height: 100%;
+  padding: 0;
+  margin: 0; }
+
+.main-container {
+  width: 25vw;
+  min-height: 100%;
+  background-color: white; }
