--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -3,9 +3,25 @@
 
 html {
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 body  {
   background-color: black;
   height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+.main-container {
+  width: 25vw;
+  min-height: 100%;
+  background-color: $color-lightest;
+}
+
+
+// summary
+
+.summary {
 }
