--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -5,27 +5,68 @@ html {
   height: 100%;
   padding: 0;
   margin: 0;
+  font-size: 10px;
 }
 
 body  {
   height: 100%;
   padding: 0;
   margin: 0;
-  background-image: url("/img/main-background-1920x1080.jpg");
-  background-position: center;
+  font-size: 1.4rem;
+  @include font-family-text();
+
 }
 
 .main-container {
   position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: url("/img/main-background.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  @include from-tablet {
+    background-size: 1242px;
+    background-position: 55%;
+  };
+  @include from-desktop-small {
+    background-size: 1649px;
+    background-position: 55%;
+  };
+  @include from-desktop-medium {
+    background-size: auto;
+    background-position: 55%;
+  };
+  @include from-desktop-large {
+    background-size: auto;
+    background-position: 50%;
+  };
+}
+
+
+.content {
+  position: absolute;
   top: 50%;
   left: 50%;
-  width: 970px;
-  height: 710px;
+  width: 80vw;
+  height: 60vw;
+  @include transform(translateX(-50%) translateY(-50%));
+  border: 1px solid grey;
+
+  @include from-desktop-large {
+    width: 900px;
+    height: 660px;
+  };
+}
+
+// home
+
+.home_head-wrapper {
+  position: absolute;
+  top: 55%;
+  left: 50%;
   @include transform(translateX(-50%) translateY(-50%));
 }
 
-
-// summary
-
-.summary {
-}
