- implementing responsive layout for desktop

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -8,65 +8,157 @@ html {
   font-size: 10px;
 }
 
+// WIDTH
+$mobile-width-max: 768px;
+
+$desktop-width-sm-min: $mobile-width-max + 1px;
+$desktop-width-sm-max: 1024px;
+
+$desktop-width-md-min: $desktop-width-sm-max + 1px;
+$desktop-width-md-max: 1190px;
+
+$desktop-width-lg-min: $desktop-width-md-max + 1px;
+
+
+// HEIGHT
+
+$desktop-height-xs-max: 548px; // 768 screen
+
+$desktop-height-sm-min: $desktop-height-xs-max + 1px;
+$desktop-height-sm-max: 700px;
+
+$desktop-height-md-min: $desktop-height-sm-max + 1px;
+$desktop-height-md-max: 880px;
+
+$desktop-height-lg-min: $desktop-height-md-max + 1px;
+
+
+@mixin caso-A {
+  @media screen and (min-width: $desktop-width-sm-min)
+    and (max-height: $desktop-height-xs-max) {
+    @content
+  }
+}
+
+@mixin caso-D {
+  @media screen and (min-width: $desktop-width-sm-min)
+    and (min-height: $desktop-height-sm-min) and (max-height: $desktop-height-sm-max) {
+    @content
+  }
+}
+
+@mixin caso-C {
+  @media screen and (min-width: $desktop-width-sm-min)
+  and (min-height: $desktop-height-md-min) and (max-height: $desktop-height-md-max){
+    @content
+  }
+}
+
+
+@mixin caso-E {
+  @media screen and (min-width: $desktop-width-sm-min) and (max-width: $desktop-width-md-max)
+  and (min-height: $desktop-height-lg-min) {
+    @content
+  }
+}
+
+
+@mixin caso-B {
+  @media screen and (min-width: $desktop-width-lg-min)
+  and (min-height: $desktop-height-lg-min) {
+    @content
+  }
+}
+
+
+
 body  {
   height: 100%;
   padding: 0;
   margin: 0;
   font-size: 1.4rem;
   @include font-family-text();
+  background: url("/img/main-background.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: black;
+  position: relative;
+
+  @media screen and (max-width: $mobile-width-max) {
+    display: none;
+  }
+
+  @include caso-A {
+    background-size: auto 964px;
+    background-position: center -209px;
+    font-size: 1rem;
+  };
+
+  @include caso-B {
+    background-size: auto;
+  };
+
+  @include caso-C {
+    background-size: auto 165vh;
+    font-size: 1.7vh;
+  };
+
+
+  @include caso-E {
+    background-size: auto 125vw;
+    background-position: 51%;
+    font-size: 1.2vw;
+  };
+
+
+  @include caso-D {
+    background-size: auto 175vh;
+    font-size: 1.8vh;
+  };
 
 }
 
 .main-container {
   position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: url("/img/main-background.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  @include from-tablet {
-    background-size: 1242px;
-    background-position: 55%;
-  };
-  @include from-desktop-small {
-    background-size: 1649px;
-    background-position: 55%;
-  };
-  @include from-desktop-medium {
-    background-size: auto;
-    background-position: 55%;
-  };
-  @include from-desktop-large {
-    background-size: auto;
-    background-position: 50%;
-  };
-}
-
-
-.content {
-  position: absolute;
   top: 50%;
-  left: 50%;
-  width: 80vw;
-  height: 60vw;
+  left: 49%;
   @include transform(translateX(-50%) translateY(-50%));
   border: 1px solid grey;
 
-  @include from-desktop-large {
-    width: 900px;
-    height: 660px;
+
+
+
+  @include caso-A {
+    border: 1px solid red;
+    top: 280px;
+    width: 620px;
+    height: 450px;
   };
+
+  @include caso-B {
+    border: 1px solid green;
+    width: 930px;
+    height: 668px;
+  };
+
+  @include caso-C {
+    border: 1px solid yellow;
+    height: 75vh;
+    width: 105vh;
+  };
+
+  @include caso-E {
+    border: 1px solid black;
+    height: 57vw;
+    width: 80vw;
+    left: 47.5%;
+  };
+
+
+  @include caso-D {
+    border: 1px solid blue;
+    height: 80vh;
+    width: 112vh;
+  };
+
 }
-
-// home
-
-.home_head-wrapper {
-  position: absolute;
-  top: 55%;
-  left: 50%;
-  @include transform(translateX(-50%) translateY(-50%));
-}
-
