--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2980,6 +2980,12 @@ h5, .h5 {
 .txt-center {
   text-align: center; }
 
+* {
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -o-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges; }
+
 html {
   height: 100%;
   padding: 0;
@@ -2992,72 +2998,20 @@ body {
   margin: 0;
   font-size: 1.4rem;
   font-family: 'oldnewspapertypes', Serif;
-  background: url("/img/main-background.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: black;
-  position: relative; }
-  @media screen and (max-width: 768px) {
-    body {
-      display: none; } }
-  @media screen and (min-width: 769px) and (max-height: 548px) {
-    body {
-      background-size: auto 964px;
-      background-position: center -209px;
-      font-size: 1rem; } }
-  @media screen and (min-width: 1191px) and (min-height: 881px) {
-    body {
-      background-size: auto; } }
-  @media screen and (min-width: 769px) and (min-height: 701px) and (max-height: 880px) {
-    body {
-      background-size: auto 165vh;
-      font-size: 1.7vh; } }
-  @media screen and (min-width: 769px) and (max-width: 1190px) and (min-height: 881px) {
-    body {
-      background-size: auto 125vw;
-      background-position: 51%;
-      font-size: 1.2vw; } }
-  @media screen and (min-width: 769px) and (min-height: 549px) and (max-height: 700px) {
-    body {
-      background-size: auto 175vh;
-      font-size: 1.8vh; } }
+  background: black url("/img/main-background.jpg") no-repeat center;
+  display: flex; }
 
 .main-container {
+  margin: auto;
+  border: 1px solid grey;
+  min-width: 600px;
+  position: relative; }
+
+.page-content {
   position: absolute;
-  top: 50%;
-  left: 49%;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  -moz-transform: translateX(-50%) translateY(-50%);
-  -ms-transform: translateX(-50%) translateY(-50%);
-  -o-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-  border: 1px solid grey; }
-  @media screen and (min-width: 769px) and (max-height: 548px) {
-    .main-container {
-      border: 1px solid red;
-      top: 280px;
-      width: 620px;
-      height: 450px; } }
-  @media screen and (min-width: 1191px) and (min-height: 881px) {
-    .main-container {
-      border: 1px solid green;
-      width: 930px;
-      height: 668px; } }
-  @media screen and (min-width: 769px) and (min-height: 701px) and (max-height: 880px) {
-    .main-container {
-      border: 1px solid yellow;
-      height: 75vh;
-      width: 105vh; } }
-  @media screen and (min-width: 769px) and (max-width: 1190px) and (min-height: 881px) {
-    .main-container {
-      border: 1px solid black;
-      height: 57vw;
-      width: 80vw;
-      left: 47.5%; } }
-  @media screen and (min-width: 769px) and (min-height: 549px) and (max-height: 700px) {
-    .main-container {
-      border: 1px solid blue;
-      height: 80vh;
-      width: 112vh; } }
+  left: 7%;
+  right: 11%;
+  top: 9%;
+  bottom: 8%; }
 
 /*# sourceMappingURL=maps/main.css.map */
