--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -1,5 +1,12 @@
 
 // base styles
+* {
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -o-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
+}
+
 
 html {
   height: 100%;
@@ -8,69 +15,6 @@ html {
   font-size: 10px;
 }
 
-// WIDTH
-$mobile-width-max: 768px;
-
-$desktop-width-sm-min: $mobile-width-max + 1px;
-$desktop-width-sm-max: 1024px;
-
-$desktop-width-md-min: $desktop-width-sm-max + 1px;
-$desktop-width-md-max: 1190px;
-
-$desktop-width-lg-min: $desktop-width-md-max + 1px;
-
-
-// HEIGHT
-
-$desktop-height-xs-max: 548px; // 768 screen
-
-$desktop-height-sm-min: $desktop-height-xs-max + 1px;
-$desktop-height-sm-max: 700px;
-
-$desktop-height-md-min: $desktop-height-sm-max + 1px;
-$desktop-height-md-max: 880px;
-
-$desktop-height-lg-min: $desktop-height-md-max + 1px;
-
-
-@mixin caso-A {
-  @media screen and (min-width: $desktop-width-sm-min)
-    and (max-height: $desktop-height-xs-max) {
-    @content
-  }
-}
-
-@mixin caso-D {
-  @media screen and (min-width: $desktop-width-sm-min)
-    and (min-height: $desktop-height-sm-min) and (max-height: $desktop-height-sm-max) {
-    @content
-  }
-}
-
-@mixin caso-C {
-  @media screen and (min-width: $desktop-width-sm-min)
-  and (min-height: $desktop-height-md-min) and (max-height: $desktop-height-md-max){
-    @content
-  }
-}
-
-
-@mixin caso-E {
-  @media screen and (min-width: $desktop-width-sm-min) and (max-width: $desktop-width-md-max)
-  and (min-height: $desktop-height-lg-min) {
-    @content
-  }
-}
-
-
-@mixin caso-B {
-  @media screen and (min-width: $desktop-width-lg-min)
-  and (min-height: $desktop-height-lg-min) {
-    @content
-  }
-}
-
-
 
 body  {
   height: 100%;
@@ -78,87 +22,23 @@ body  {
   margin: 0;
   font-size: 1.4rem;
   @include font-family-text();
-  background: url("/img/main-background.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: black;
-  position: relative;
+  background: black url("/img/main-background.jpg") no-repeat center;
+  display: flex;
 
-  @media screen and (max-width: $mobile-width-max) {
-    display: none;
-  }
-
-  @include caso-A {
-    background-size: auto 964px;
-    background-position: center -209px;
-    font-size: 1rem;
-  };
-
-  @include caso-B {
-    background-size: auto;
-  };
-
-  @include caso-C {
-    background-size: auto 165vh;
-    font-size: 1.7vh;
-  };
-
-
-  @include caso-E {
-    background-size: auto 125vw;
-    background-position: 51%;
-    font-size: 1.2vw;
-  };
-
-
-  @include caso-D {
-    background-size: auto 175vh;
-    font-size: 1.8vh;
-  };
 
 }
 
 .main-container {
-  position: absolute;
-  top: 50%;
-  left: 49%;
-  @include transform(translateX(-50%) translateY(-50%));
+  margin: auto;
   border: 1px solid grey;
+  min-width: 600px;
+  position: relative;
+}
 
-
-
-
-  @include caso-A {
-    border: 1px solid red;
-    top: 280px;
-    width: 620px;
-    height: 450px;
-  };
-
-  @include caso-B {
-    border: 1px solid green;
-    width: 930px;
-    height: 668px;
-  };
-
-  @include caso-C {
-    border: 1px solid yellow;
-    height: 75vh;
-    width: 105vh;
-  };
-
-  @include caso-E {
-    border: 1px solid black;
-    height: 57vw;
-    width: 80vw;
-    left: 47.5%;
-  };
-
-
-  @include caso-D {
-    border: 1px solid blue;
-    height: 80vh;
-    width: 112vh;
-  };
-
+.page-content {
+  position: absolute;
+  left: 7%;
+  right: 11%;
+  top: 9%;
+  bottom: 8%;
 }
